added support for german lang and some other changes in image folder structure

--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "express": "^4.17.1",
+    "i18next": "^19.6.0",
+    "i18next-browser-languagedetector": "^5.0.0",
+    "i18next-xhr-backend": "^3.2.2",
+    "moment": "^2.27.0",
     "razzle": "^3.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
